# vdl

./: README.md  pyproject.toml
src/vdl/: __init__.py
src/vdl/downloader/: __init__.py  download_manager.py  vsix_api_handler.py
src/vdl/models/: extension.py
src/vdl/tui/: __init__.py  app.py  styles.tcss
src/vdl/tui/screens/: __init__.py  main_screen.py  search_screen.py
src/vdl/tui/widgets/: __init__.py  download_progress_widget.py  extension_widget.py  search_widget.py
