[project]
name = "vdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jai Brown", email = "jaintp.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "httpx==0.28.1",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "textual==1.0.0",
]

[dependency-groups]
dev = [
    "pytest-watch>=4.2.0",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vdl = "vdl:main"
